[package]
name = "nvalloc"
version = "0.1.0"
edition = "2018"

[profile.release]
lto = "thin"
opt-level = 3

[dependencies]
log = "0.4"
libc = "0.2"
bitfield-struct = "0.1.4"
env_logger = { version = "0.9", default-features = false, optional = true }
spin = { version = "0.9.2", default-features = false, features = ["use_ticket_mutex"] }

[dev-dependencies]
env_logger = { version = "0.9", default-features = false }
clap = { version = "3.0.5", default-features = false, features = ["std", "derive"] }

[features]
stop = []
log_debug = ["log/max_level_debug"]
log_info = ["log/max_level_info"]
log_warn = ["log/max_level_warn"]
log_error = ["log/max_level_error"]
thread = []
logger = ["env_logger"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "10.2"

[[example]]
name = "bench"
required-features = ["logger", "thread"]

[[example]]
name = "detail"
required-features = ["logger", "thread"]

[[example]]
name = "cpu"
required-features = ["thread"]
