[package]
name = "nvalloc"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"
opt-level = 3
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
cfg-if = "1.0"
log = { version = "0.4", default-features = false }
libc = { version = "0.2", optional = true }
bitfield-struct = "0.1.7"
env_logger = { version = "0.9", default-features = false, optional = true }
spin = { version = "0.9.3", default-features = false, features = ["use_ticket_mutex", "barrier"] }

[dev-dependencies]
env_logger = { version = "0.9", default-features = false }
libc = "0.2"
clap = { version = "3.1", default-features = false, features = ["std", "derive"] }

[features]
std = ["log/std", "libc", "env_logger"]
log_debug = ["log/max_level_debug"]
log_info = ["log/max_level_info"]
log_warn = ["log/max_level_warn"]
log_error = ["log/max_level_error"]
stop = ["std"]
thread = ["std"]

# The examples / benchmarks

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
raw-cpuid = "10.3"

[[example]]
name = "bench"
required-features = ["thread"]

[[example]]
name = "crash"
required-features = ["thread"]

[[example]]
name = "detail"
required-features = ["thread"]

[[example]]
name = "cpu"
required-features = ["thread"]

[[example]]
name = "mmap"
required-features = ["std"]
