[package]
name = "llfree-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
llfree = { path = "../core", features = ["std", "log_info"] }
libc = "0.2"
log = { version = "0.4", default-features = false }
clap = { version = "4.4", default-features = false, features = ["std", "derive", "help"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = { version = "11.0" }

[features]
llc = ["llfree/llc"]
16K = ["llfree/16K"]

# binaries

[[bin]]
name = "bench"
test = false
bench = false

[[bin]]
name = "cpu"
test = false
bench = false

[[bin]]
name = "crash"
test = false
bench = false

[[bin]]
name = "dist"
test = false
bench = false

[[bin]]
name = "write"
test = false
bench = false
