[package]
name = "llfree"
version = "0.2.0"
edition = "2024"
rust-version = "1.93.0"

[dependencies]
bitfield-struct = "0.12"
log = { version = "0.4", default-features = false }
env_logger = { version = "0.11", default-features = false, optional = true }

[dev-dependencies]
env_logger = { version = "0.11", default-features = false }

[features]
default = []
std = ["log/std", "env_logger"]
log_debug = ["log/max_level_debug"]
log_info = ["log/max_level_info"]
log_warn = ["log/max_level_warn"]
log_error = ["log/max_level_error"]

16K = []
free_reserve = []
