[package]
name = "llfree"
version = "0.2.0"
edition = "2024"
rust-version = "1.95.0"

[dependencies]
bitfield-struct = "0.13"
log = { version = "0.4", default-features = false }
env_logger = { version = "0.11", default-features = false, optional = true }

[dev-dependencies]
env_logger = { version = "0.11", default-features = false }

[features]
default = []
std = ["log/std", "env_logger"]
log_debug = ["log/max_level_debug"]
log_info = ["log/max_level_info"]
log_warn = ["log/max_level_warn"]
log_error = ["log/max_level_error"]

16K = []
free_reserve = []

# tree_huge_1 = []
# 2 huge frames per tree -> 4MiB
tree_huge_2 = []
# 4 huge frames per tree -> 8MiB
tree_huge_4 = []
# 8 huge frames per tree -> 16MiB
tree_huge_8 = []
# 16 huge frames per tree -> 32MiB
tree_huge_16 = []
# 32 huge frames per tree -> 64MiB
tree_huge_32 = []
# 64 huge frames per tree -> 128MiB
tree_huge_64 = []
# 128 huge frames per tree -> 256MiB
tree_huge_128 = []
# 256 huge frames per tree -> 512MiB
tree_huge_256 = []
# 512 huge frames per tree -> 1GiB
tree_huge_512 = []
