[package]
name = "nvalloc-module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]
test = false
bench = false
path = "nvalloc_rs.rs"

[dependencies]
cfg-if = "1.0"
log = { version = "0.4", default-features = false }
nvalloc = { path = "../core", default-features = false }

[features]
default = ["log_warn"]
log_debug = ["nvalloc/log_debug", "log/max_level_debug"]
log_info = ["nvalloc/log_info", "log/max_level_info"]
log_warn = ["nvalloc/log_warn", "log/max_level_warn"]
log_error = ["nvalloc/log_error", "log/max_level_error"]
